# cource-work

./: .gitignore  Makefile  README.md  build.sh  clear.sh  elementary_conjuction.cpp  main.cpp  polynomial.cpp  report.sh
headers/: elementary_conjuction.h
report/: course-work.tex
src/: CMakeLists.txt
src/hdrs/: elementary_conjuction.h  polynomial.h  zero_polynomial.h
src/headers/: elementary_conjuction.h  polynomial.h
src/impl/: elementary_conjuction.cpp  polynomial.cpp  variable.cpp  zero_polynomial.cpp
src/implementation/: CMakeLists.txt  elementary_conjuction.cpp  polynomial.cpp
src/libs/: CMakeLists.txt  elementary_conjuction.cpp  polynomial.cpp  polynomial.h
